--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~8.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@angular/cdk": "^8.0.2",
+    "@angular/flex-layout": "^8.0.0-beta.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
